# vehicle-rental-system

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md
rental_system/: main.py
rental_system/models/: bike.py  car.py  truck.py  vehicle.py
rental_system/services/: rental_manager.py
rental_system/ui/: cli.py
rental_system/utils/: storage.py
tests/: test_models.py  test_services.py
